# jetson-voice-ai-monitor

./: .env.example  .gitignore  HACKATHON_SUBMISSION.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  SELF_IMPROVEMENT.md
examples/: nonsense_inputs.example.json  qa_review_queue.example.json  weak_answers.example.json
examples/knowledge_base/: kb_items.example.json
scripts/: download_models.sh  install_deps_jetson.sh  install_systemd.sh  run_dashboard.sh  run_voice_daemon.sh  start_llama_server.sh
src/jetson_voice_ai_monitor/: __init__.py  dashboard.py  say_status.py  voice_daemon.py
systemd/: jetson-voice-daemon.service  jetson-voice-dashboard.service
