[project]
name = "jetson-voice-ai-monitor"
version = "0.1.0"
description = "Offline-first self-improving Jetson tutor: local voice Q&A with Qwen, weak-answer judgment, and knowledge-base enrichment when online."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "cozyss"}]
keywords = ["jetson", "offline-education", "tutor", "qwen", "whisper", "piper", "llama.cpp", "edge-ai", "hackathon"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
jetson-voice-daemon = "jetson_voice_ai_monitor.voice_daemon:main"
jetson-voice-dashboard = "jetson_voice_ai_monitor.dashboard:main"
jetson-voice-say = "jetson_voice_ai_monitor.say_status:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
